--- a/style1.css
+++ b/style1.css
@@ -52,6 +52,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: IMB Plex sans;
+    font-weight: 400;
 }
 h1{
     font-family: IBM Plex sans;
