--- a/style1.css
+++ b/style1.css
@@ -52,7 +52,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: IBM Plex sans;
-    font-weight: 500;
+    
 }
 h1{
     font-family: IBM Plex sans;
@@ -108,6 +108,7 @@ nav div a{
 .about p {
     text-align: justify;
     max-width: 300px;
+    font-weight: 500;
 }
 
 .about button{
@@ -125,6 +126,7 @@ nav div a{
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     font-weight: bolder;
+    font-family: IBM Plex sans;
 }
 section.about img{
     display: flex;
