--- a/style1.css
+++ b/style1.css
@@ -256,3 +256,8 @@ section.about img{
     border: 2px solid transparent;
     box-shadow: 0 4px 6px -2px rgba(70, 70, 70, 0.5);
 }
+
+h4{
+    text-align: center;
+    color: rgba(128, 128, 128, 0.774);
+}
